[gd_scene load_steps=9 format=2]

[ext_resource path="res://monster.gd" type="Script" id=1]
[ext_resource path="res://assets/monster1.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "walk_down"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=2]

resource_name = "walk_left"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=3]

resource_name = "walk_right"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=4]

resource_name = "walk_up"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 1
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Expand Margin" ]

[sub_resource type="CapsuleShape2D" id=6]

custom_solver_bias = 0.0
radius = 10.9461
height = 6.34204

[node name="Monster" type="Node2D" index="0" groups=[
"enemy",
]]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
health_red = 100
health_green = 100
health_blue = 100
SPEED = 200.0
type = "horny"

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 1
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.01
playback_speed = 1.0
anims/walk_down = SubResource( 1 )
anims/walk_left = SubResource( 2 )
anims/walk_right = SubResource( 3 )
anims/walk_up = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options", "playback" ]

[node name="Healthbars" type="Node2D" parent="." index="1"]

[node name="HealthbarRed" type="ProgressBar" parent="Healthbars" index="0"]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -23.0
margin_top = -41.0
margin_right = 25.0
margin_bottom = -25.0
rect_scale = Vector2( 1, 0.35 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 5 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
percent_visible = false
_sections_unfolded = [ "Margin", "Rect", "Visibility", "custom_styles" ]

[node name="HealthbarGreen" type="ProgressBar" parent="Healthbars" index="1"]

modulate = Color( 0, 1, 0.15625, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -23.0
margin_top = -34.0
margin_right = 25.0
margin_bottom = -18.0
rect_scale = Vector2( 1, 0.35 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 5 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
percent_visible = false
_sections_unfolded = [ "Margin", "Rect", "Visibility", "custom_styles" ]

[node name="HealthbarBlue" type="ProgressBar" parent="Healthbars" index="2"]

modulate = Color( 0, 0.179688, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -23.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = -10.0
rect_scale = Vector2( 1, 0.35 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 5 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
percent_visible = false
_sections_unfolded = [ "Margin", "Rect", "Visibility", "custom_styles" ]

[node name="body" type="RigidBody2D" parent="." index="2"]

input_pickable = false
collision_layer = 3
collision_mask = 3
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body" index="0"]

position = Vector2( 1, 1 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="body" to="." method="_on_body_body_entered"]

[connection signal="body_shape_entered" from="body" to="." method="_on_body_body_shape_entered"]


